--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="stylesheet" href="../static/css/main.css" />
+  <link rel="stylesheet" href="/static/css/main.css" />
 
   <title>MG Digital</title>
 </head>
@@ -26,7 +26,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="../static/img/Iron_Man_icon.svg" alt="" width="60" height="48"
+        <img src="/static/img/Iron_Man_icon.svg" alt="" width="60" height="48"
           class="d-inline-block align-text-top" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -48,13 +48,13 @@
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="2000">
-        <img src="../static/img/slide_1.jpg" class="d-block w-100" alt="slide_1" />
+        <img src="/static/img/slide_1.jpg" class="d-block w-100" alt="slide_1" />
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="../static/img/slide_2.jpg" class="d-block w-100" alt="slide_2" />
+        <img src="/static/img/slide_2.jpg" class="d-block w-100" alt="slide_2" />
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="../static/img/slide_3.jpg" class="d-block w-100" alt="slide_3" />
+        <img src="/static/img/slide_3.jpg" class="d-block w-100" alt="slide_3" />
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -81,7 +81,7 @@
   <section class="container-fluid">
     <div class="row w-75 mx-auto servicio-fila">
       <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-        <img src="../static/img/marketindigital.png" alt="" width="180" height="160">
+        <img src="/static/img/marketindigital.png" alt="" width="180" height="160">
         <div>
           <h3 class="fs-5 mt-4 px-4 pb-1">¿Para que sirve?</h3>
           <p class="px-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta blanditiis impedit
@@ -90,7 +90,7 @@
         </div>
       </div>
       <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-        <img src="../static/img/concepto.png" alt="" width="180" height="160">
+        <img src="/static/img/concepto.png" alt="" width="180" height="160">
         <div>
           <h3 class="fs-5 mt-4 px-4 pb-1">Concepto</h3>
           <p class="px-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga dignissimos illum non, modi,
@@ -101,7 +101,7 @@
     </div>
     <div class="row w-75 mx-auto servicio-fila">
       <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-        <img src="../static/img/comunicaciones.png" alt="" width="180" height="160">
+        <img src="/static/img/comunicaciones.png" alt="" width="180" height="160">
         <div>
           <h3 class="fs-5 mt-4 px-4 pb-1">Comunicacion</h3>
           <p class="px-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta blanditiis impedit
@@ -110,7 +110,7 @@
         </div>
       </div>
       <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-        <img src="../static/img/seo.png" alt="" width="180" height="160">
+        <img src="/static/img/seo.png" alt="" width="180" height="160">
         <div>
           <h3 class="fs-5 mt-4 px-4 pb-1">Seo</h3>
           <p class="px-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga dignissimos illum non, modi,
@@ -129,7 +129,7 @@
       <p class="fs-5">Buscamos las personas con dedicacion y pasion para que trabajen con nosotros. Si te sientes listo
         para este reto, ¿Que esperas para unirte?</p>
         <div class="img-fluid">
-          <img src="../static/img/team.png" alt="" width="360" height="320">
+          <img src="/static/img/team.png" alt="" width="360" height="320">
         </div>
     </div>
   </section>
