--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <link rel="stylesheet" href="static/css/main.css" />
 
+  <!-- Fontawesome CSS -->
+  <script src="https://kit.fontawesome.com/a1d1e5f704.js" crossorigin="anonymous"></script>
+
   <title>MG Digital</title>
 </head>
 
 <body>
-  <!--ENCABEZADO-->
+  <!--ENCABEZADO
   <header class="container-fluid bg-dark d-flex justify-content-center">
     <p class="text-light fw-bold mb-0 p-2 fs-6">Marketing Digital</p>
-  </header>
+  </header>-->
 
   <!--MENU-->
 
   </nav>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="static/img/Iron_Man_icon.svg" alt="" width="60" height="48"
-          class="d-inline-block align-text-top" />
+        <img src="static/img/logotransparente.png" alt="" width="100" class="d-inline-block align-text-top" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -124,28 +126,48 @@
   <!--ABOUT WE-->
 
   <section>
-    <div class="w-75 m-auto text-center" id="equipo">
-      <h1 class="mb-5 fs-3">Equipo pequeño con <span class="text-primary">resultados asombrosos</span></h1>
-      <p class="fs-5">Buscamos las personas con dedicacion y pasion para que trabajen con nosotros. Si te sientes listo
+    <div class="w-50 m-auto text-center" id="equipo">
+      <h1 class="mb-5 fs-2">Equipo pequeño con <span class="text-primary">resultados asombrosos</span></h1>
+      <p class="fs-4">Buscamos las personas con dedicacion y pasion para que trabajen con nosotros. Si te sientes listo
         para este reto, ¿Que esperas para unirte?</p>
-        <div class="img-fluid">
-          <img src="static/img/team.png" alt="" width="360" height="320">
-        </div>
+      <div class="mt-5 text-center">
+        <img src="static/img/team.png" alt="equipo" width="360" height="320">
+      </div>
     </div>
   </section>
 
-  <!--CONTACTO-->
-
+  <!--CONTACTO
   <section id="seccion-contacto" class="border-bottom border-secondary border-2">
     <div id ="bg-contacto">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#f3f4f5" fill-opacity="1" d="M0,192L48,176C96,160,192,128,288,106.7C384,85,480,75,576,90.7C672,107,768,149,864,154.7C960,160,1056,128,1152,122.7C1248,117,1344,139,1392,149.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-
     </div>
-  </section>
+  </section>-->
 
   <!--FOOTER-->
-  <footer class="container-fluid bg-light d-flex justify-content-center">
-    <p class="text-dark fw-bold mb-0 p-2 fs-6">Marketing Digital</p>
+  <footer>
+
+    <div class="container__footer">
+      <div class="box__footer">
+        <div class="logo">
+          <img src="static/img/logotransparente.png" alt="">
+        </div>
+        <div class="terms">
+          <p></p>
+        </div>
+      </div>
+      <div class="box__footer">
+        <h2>Redes Sociales</h2>
+        <a href="https://www.facebook.com/"> <i class="fab fa-facebook-square"></i> Facebook</a>
+        <a href="https://twitter.com/"><i class="fab fa-twitter-square"></i> Twitter</a>
+        <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i> Linkedin</a>
+        <a href="https://www.instagram.com/?hl=es-la"><i class="fab fa-instagram-square"></i> Instagram</a>
+      </div>
+    </div>
+
+    <div class="box__copyright">
+      <hr>
+      <p>Todos los derechos reservados © 2021 <b>MagtimusPro</b></p>
+    </div>
   </footer>
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
